# ultimaille

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: continuous.yml  nightly.yml
cmake/: cxx_compiler_flag.cmake
ext/: CMakeLists.txt
ext/HLBFGS/: CMakeLists.txt
ext/OpenNL_psm/: CMakeLists.txt  OpenNL_example.c  OpenNL_psm.c
ext/zlib/: CMakeLists.txt  gzlib.c  gzread.c  gzwrite.c
notes/: eigen2x2symmetric.xoj  eigen3x3symmetric.xoj  gradient.xoj
sandpit/: CMakeLists.txt  helloworld.cpp  informal_tests.cpp
sandpit/2d-interpolation/: 2d-mesh.geogram  CMakeLists.txt
sandpit/embed/: CMakeLists.txt  embed.cpp
sandpit/pgp2d/: ff2d.cpp  pgp2d-flat.cpp
sandpit/test/: CMakeLists.txt  helloworld.cpp  test-disjoint-set.cpp  test-eigen.cpp  test-lbfgs.cpp  test.cpp
sandpit/test-io/: CMakeLists.txt
sandpit/test-permutation/: test-permutation.cpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/ultimaille/: CMakeLists.txt  attributes.cpp  attributes.h  colocate.cpp  colocate.h  constraints.h  disjointset.h  geometry.h  hboxes.cpp  hboxes.h  knn.h  mesh_io.cpp  mesh_io.h  permutation.h  pointset.cpp  pointset.h  polyline.cpp  polyline.h  range.h  segments.cpp  segments.h  surface.cpp  surface.h  voronoi.cpp  voronoi.h
test/: CMakeLists.txt
test/2d-interpolation/: 2d-interpolation.cpp  CMakeLists.txt
test/embed/: CMakeLists.txt
test/meshIO/: CMakeLists.txt  test-io-volume.cpp
test/meshIO/data/: hex-tet.geogram  hex.geogram  tet.geogram
test/pgp2d/: CMakeLists.txt  cut.cpp  ff2d.cpp  pgp2d-corners.cpp  pgp2d-flat.cpp  pgp2d-no-singu.cpp  pgp2d.cpp  tex.lua
test/test/: CMakeLists.txt  test-orientation.cpp  test-quaternion.cpp  test-range.cpp  test.cpp
test/test-io/: test-io.cpp  typical-example.geogram
test/test-permutation/: CMakeLists.txt
test/test-volume/: CMakeLists.txt  test-volume.cpp
tests/: CMakeLists.txt  test-attributes.cpp  test-bbox.cpp  test-bvh.cpp  test-disjointset.cpp  test-eigendecomposition.cpp  test-geom.cpp  test-hilbertsort.cpp  test-io-geogram.cpp  test-io-medit.cpp  test-io-obj.cpp  test-io-vtk.cpp  test-io-vtk2.cpp  test-io-xyz.cpp  test-io.cpp  test-knn.cpp  test-lbfgs.cpp  test-least-squares.cpp  test-linear.cpp  test-nearest.cpp  test-numbering.cpp  test-opennl.cpp  test-pca.cpp  test-permutation.cpp  test-quaternions.cpp  test-sparse.cpp  test-surface-connectivity.cpp  test-svd.cpp  test-tetrahedra.cpp  test-volume-connectivity.cpp
tests/input/: knn-cloud.geogram  knn-request.geogram  test-with-attribute.vtk
ultimaille/: HLBFGS_wrapper.cpp  HLBFGS_wrapper.h  all.h  assert.cpp  assert.h  attr_binding.h  attributes.h  colocate.cpp  colocate.h  constraints.h  disjointset.h  eigen.cpp  eigen.h  geometry.cpp  geometry.h  hboxes.cpp  hboxes.h  hilbert_sort.h  inspect.cpp  inspect.h  iterator.h  knn.h  mat.h  mesh_io.cpp  mesh_io.h  meter.cpp  meter.h  permutation.h  pointset.cpp  pointset.h  polyline.cpp  polyline.h  primitive_geometry.cpp  primitive_geometry.h  quaternion.h  range.h  surface.cpp  surface.h  surface_connectivity.cpp  surface_connectivity.h  (+10 more)
ultimaille/algebra/: covariance.cpp  covariance.h  eigen.cpp  eigen.h  mat.h  quaternion.h  svd.cpp  svd.h  vec.h
ultimaille/attic/: Readme.md  hilbert_sort.h
ultimaille/helpers/: bvh.cpp  bvh.h  colocate.cpp  colocate.h  constraints.h  disjointset.h  hboxes.cpp  hboxes.h  hilbert_sort.h  knn.h  nearest.cpp  nearest.h  permutation.h
ultimaille/io/: by_extension.h  fromsuffix.cpp  fromsuffix.h  geogram.cpp  geogram.h  medit.cpp  medit.h  obj.cpp  obj.h  vtk.cpp  vtk.h  xyz.cpp  xyz.h
ultimaille/linear/: linexpr.cpp  linexpr.h  rbuilder.cpp  rbuilder.h  sparsematrix.cpp  sparsematrix.h
ultimaille/sparse/: least_squares.cpp  least_squares.h  linexpr.h  matrix.cpp  matrix.h  nullspace.cpp  nullspace.h  vector.cpp  vector.h
ultimaille/syntactic-sugar/: HLBFGS_wrapper.h  assert.cpp  assert.h  parallel.h  range.h
